cluster/apps/gluetun/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "gluetun"
  namespace: "gluetun"
  labels:
    name: "gluetun"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: "gluetun"
  template:
    metadata:
      labels:
        name: "gluetun"
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1

      containers:
        - name: "qbittorrent"
          image: "lscr.io/linuxserver/qbittorrent:5.2.3-libtorrentv1"
          imagePullPolicy: "Always"
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          ports:
            - containerPort: 8080
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: "/config"
              name: "qbittorrent-config"
            - mountPath: "/media"
              name: "qbittorrent-media"
      
      volumes:
        - name: "qbittorrent-config"
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: "qbittorrent-media"
          nfs:
            server: ${NFS_HOST}
            path: /tank/media
