cluster/apps/gluetun/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: "qbittorrent"
  namespace: "gluetun"
spec:
  type: "ClusterIP"
  selector:
    name: "gluetun"
  ports:
    - port: 8080
      targetPort: 8080
      protocol: "TCP"
      name: "qbittorrent"
